--- a/tes3mp-verifier/appsettings.json
+++ b/tes3mp-verifier/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "VerifierContext": "Host=localhost:5432;Database=tes3mp-verifier;Username=postgres;Password=postgres"
+    "VerifierContext": "Host=127.0.0.1;Port=5432;Database=tes3mp-verifier;Username=postgres;Password=postgres"
   },
   "AllowedHosts": "*"
 }
